--- a/transcriber/pyproject.toml
+++ b/transcriber/pyproject.toml
@@ -7,8 +7,8 @@ readme = "README.md"
 packages = [{ include = "transcriber", from = "src" }]
 
 [tool.poetry.dependencies]
-python = "^3.13"
-google-generativeai = "^0.3.1"
+python = "^3.10"
+google-genai = "^1.1"
 google-cloud-storage = "^2.10.0"
 pydantic = "^2.0"
 python-dotenv = "^1.0.0"
